--- a/tests/core/bus_center/lnn/BUILD.gn
+++ b/tests/core/bus_center/lnn/BUILD.gn
@@ -129,7 +129,7 @@ ohos_unittest("NetBuilderTest") {
   }
 }
 
-ohos_unittest("LnnHuksUtilsTest") {
+ohos_unittest("LNNHuksUtilsTest") {
   module_out_path = module_output_path
   sources = [ "unittest/lnn_huks_test.cpp" ]
   include_dirs = bus_center_unittest_dirs
@@ -169,7 +169,7 @@ ohos_unittest("LedgerLaneHubTest") {
   }
 }
 
-ohos_unittest("LnnBusCenterIpcTest") {
+ohos_unittest("LNNBusCenterIpcTest") {
   module_out_path = module_output_path
   sources = [ "ipc/lnn_bus_center_ipc_test.cpp" ]
   include_dirs = bus_center_unittest_dirs
@@ -448,7 +448,7 @@ ohos_unittest("LNNTestMock") {
   }
 }
 
-ohos_unittest("LNNBtNetworkImplMock") {
+ohos_unittest("LNNBtNetworkImplMockTest") {
   module_out_path = module_output_path
   sources = [
     "$dsoftbus_root_path/core/bus_center/utils/src/lnn_async_callback_utils.c",
@@ -517,7 +517,7 @@ ohos_unittest("LNNBtNetworkImplMock") {
   }
 }
 
-ohos_unittest("LNNNetworkManagerMock") {
+ohos_unittest("LNNNetworkManagerMockTest") {
   module_out_path = module_output_path
   sources = [
     "net_builder/src/lnn_auth_mock.cpp",
@@ -583,7 +583,7 @@ ohos_unittest("LNNNetworkManagerMock") {
   }
 }
 
-ohos_unittest("LNNIpNetworkImplMock") {
+ohos_unittest("LNNIpNetworkImplMockTest") {
   module_out_path = module_output_path
   sources = [
     "net_builder/src/lnn_net_ledger_mock.cpp",
@@ -649,7 +649,7 @@ ohos_unittest("LNNIpNetworkImplMock") {
   }
 }
 
-ohos_unittest("LNNLedgerTestMock") {
+ohos_unittest("LNNLedgerMockTest") {
   module_out_path = module_output_path
   sources = [
     "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/src/lnn_device_info.c",
@@ -719,7 +719,139 @@ ohos_unittest("LNNLedgerTestMock") {
   }
 }
 
-ohos_unittest("LNNLedgerTest") {
+ohos_unittest("LNNNetLedgerCommonTest") {
+  module_out_path = module_output_path
+  sources = [ "net_ledger/lnn_ledger_common_test.cpp" ]
+
+  include_dirs = [
+    "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/heartbeat/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_builder/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_buscenter/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_builder/sync_info/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/local_ledger/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/disc_mgr/include",
+    "$dsoftbus_root_path/core/bus_center/monitor/include",
+    "$dsoftbus_root_path/core/common/include",
+    "$dsoftbus_root_path/adapter/common/include",
+    "$dsoftbus_root_path/core/connection/interface",
+    "$dsoftbus_root_path/core/connection/p2p/interface",
+    "$dsoftbus_root_path/core/connection/p2p/common/include",
+    "$dsoftbus_root_path/core/authentication/interface",
+    "$dsoftbus_root_path/core/bus_center/interface",
+    "$dsoftbus_root_path/core/bus_center/utils/include",
+    "$dsoftbus_root_path/interfaces/kits/bus_center",
+    "$dsoftbus_root_path/interfaces/kits/common",
+    "$dsoftbus_root_path/core/adapter/bus_center/include",
+    "//commonlibrary/c_utils/base/include",
+    "//third_party/cJSON",
+    "unittest/common/",
+    "$dsoftbus_root_path/core/connection/manager",
+    "$dsoftbus_root_path/adapter/common/bus_center/include/",
+    "$dsoftbus_root_path/core/discovery/manager/include",
+    "$dsoftbus_root_path/core/discovery/interface",
+    "$dsoftbus_root_path/interfaces/kits/discovery",
+    "$dsoftbus_root_path/core/bus_center/service/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/decision_db/include",
+    "//base/security/huks/interfaces/innerkits/huks_standard/main/include",
+  ]
+
+  deps = [
+    "$dsoftbus_root_path/adapter:softbus_adapter",
+    "$dsoftbus_root_path/core/common:softbus_utils",
+    "$dsoftbus_root_path/core/frame:softbus_server",
+    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
+    "//base/security/device_auth/services:deviceauth_sdk",
+    "//third_party/googletest:gmock",
+    "//third_party/googletest:gtest_main",
+  ]
+  if (dsoftbus_feature_lnn_net) {
+    sources += [ "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/src/lnn_distributed_net_ledger.c" ]
+  } else {
+    sources += [ "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/src/lnn_distributed_net_ledger_virtual.c" ]
+  }
+  if (is_standard_system) {
+    external_deps = [
+      "c_utils:utils",
+      "hiviewdfx_hilog_native:libhilog",
+    ]
+  } else {
+    external_deps = [
+      "c_utils:utils",
+      "hilog:libhilog",
+    ]
+  }
+}
+
+ohos_unittest("LNNDisctributedLedgerTest") {
+  module_out_path = module_output_path
+  sources = [ "net_ledger/lnn_disctributed_net_ledger_test.cpp" ]
+
+  include_dirs = [
+    "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/heartbeat/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_builder/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_buscenter/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_builder/sync_info/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/local_ledger/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/common/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/disc_mgr/include",
+    "$dsoftbus_root_path/core/bus_center/monitor/include",
+    "$dsoftbus_root_path/core/common/include",
+    "$dsoftbus_root_path/adapter/common/include",
+    "$dsoftbus_root_path/core/connection/interface",
+    "$dsoftbus_root_path/core/connection/p2p/interface",
+    "$dsoftbus_root_path/core/connection/p2p/common/include",
+    "$dsoftbus_root_path/core/authentication/interface",
+    "$dsoftbus_root_path/core/bus_center/interface",
+    "$dsoftbus_root_path/core/bus_center/utils/include",
+    "$dsoftbus_root_path/interfaces/kits/bus_center",
+    "$dsoftbus_root_path/interfaces/kits/common",
+    "$dsoftbus_root_path/core/adapter/bus_center/include",
+    "//commonlibrary/c_utils/base/include",
+    "//third_party/cJSON",
+    "unittest/common/",
+    "$dsoftbus_root_path/core/connection/manager",
+    "$dsoftbus_root_path/adapter/common/bus_center/include/",
+    "$dsoftbus_root_path/core/discovery/manager/include",
+    "$dsoftbus_root_path/core/discovery/interface",
+    "$dsoftbus_root_path/interfaces/kits/discovery",
+    "$dsoftbus_root_path/core/bus_center/service/include",
+    "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/decision_db/include",
+    "//base/security/huks/interfaces/innerkits/huks_standard/main/include",
+  ]
+
+  deps = [
+    "$dsoftbus_root_path/adapter:softbus_adapter",
+    "$dsoftbus_root_path/core/common:softbus_utils",
+    "$dsoftbus_root_path/core/frame:softbus_server",
+    "//base/hiviewdfx/hilog/interfaces/native/innerkits:libhilog",
+    "//base/security/device_auth/services:deviceauth_sdk",
+    "//third_party/googletest:gmock",
+    "//third_party/googletest:gtest_main",
+  ]
+  if (dsoftbus_feature_lnn_net) {
+    sources += [ "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/src/lnn_distributed_net_ledger.c" ]
+  } else {
+    sources += [ "$dsoftbus_root_path/core/bus_center/lnn/net_ledger/distributed_ledger/src/lnn_distributed_net_ledger_virtual.c" ]
+  }
+  if (is_standard_system) {
+    external_deps = [
+      "c_utils:utils",
+      "hiviewdfx_hilog_native:libhilog",
+    ]
+  } else {
+    external_deps = [
+      "c_utils:utils",
+      "hilog:libhilog",
+    ]
+  }
+}
+
+ohos_unittest("LNNMetaNodeLedgerTest") {
   module_out_path = module_output_path
   sources = [
     "net_ledger/lnn_disctributed_net_ledger_test.cpp",
@@ -789,7 +921,7 @@ ohos_unittest("LNNLedgerTest") {
   }
 }
 
-ohos_unittest("LNNLaneTestMock") {
+ohos_unittest("LNNLaneMockTest") {
   module_out_path = module_output_path
   sources = [
     "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager/src/lnn_lane.c",
@@ -859,7 +991,7 @@ ohos_unittest("LNNLaneTestMock") {
   }
 }
 
-ohos_unittest("LNNLaneLinkTestMock") {
+ohos_unittest("LNNLaneLinkMockTest") {
   module_out_path = module_output_path
   sources = [
     "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager/src/lnn_lane_link.c",
@@ -918,7 +1050,7 @@ ohos_unittest("LNNLaneLinkTestMock") {
   }
 }
 
-ohos_unittest("LNNTransLaneTestMock") {
+ohos_unittest("LNNTransLaneMockTest") {
   module_out_path = module_output_path
   sources = [
     "$dsoftbus_root_path/core/bus_center/lnn/lane_hub/lane_manager/src/lnn_lane_common.c",
@@ -980,7 +1112,7 @@ ohos_unittest("LNNTransLaneTestMock") {
   }
 }
 
-ohos_unittest("LNNDiscMgrTest") {
+ohos_unittest("LNNDiscoveryInterfaceTest") {
   module_out_path = module_output_path
   sources = [
     "disc_mgr/disc_manager_mock.cpp",
@@ -1115,22 +1247,24 @@ group("unittest") {
   deps = [
     ":BusCenterClientProxyStandardTest",
     ":BusCenterClientProxyTest",
-    ":LNNBtNetworkImplMock",
-    ":LNNDiscMgrTest",
-    ":LNNIpNetworkImplMock",
-    ":LNNLaneLinkTestMock",
-    ":LNNLaneTestMock",
-    ":LNNLedgerTest",
-    ":LNNLedgerTestMock",
+    ":LNNBtNetworkImplMockTest",
+    ":LNNBusCenterIpcTest",
+    ":LNNDiscoveryInterfaceTest",
+    ":LNNDisctributedLedgerTest",
+    ":LNNHuksUtilsTest",
+    ":LNNIpNetworkImplMockTest",
+    ":LNNLaneLinkMockTest",
+    ":LNNLaneMockTest",
+    ":LNNLedgerMockTest",
+    ":LNNMetaNodeLedgerTest",
     ":LNNNetBuilderMockTest",
     ":LNNNetBuilderTest",
-    ":LNNNetworkManagerMock",
+    ":LNNNetLedgerCommonTest",
+    ":LNNNetworkManagerMockTest",
     ":LNNTestMock",
-    ":LNNTransLaneTestMock",
+    ":LNNTransLaneMockTest",
     ":LaneTest",
     ":LedgerLaneHubTest",
-    ":LnnBusCenterIpcTest",
-    ":LnnHuksUtilsTest",
     ":NetBuilderTest",
     ":NetLedgerTest",
   ]
