fix:solve ut Rectification test case
Signed-off-by: heyangbo <heyangbo1@huawei.com>

--- a/tests/core/authentication/BUILD.gn
+++ b/tests/core/authentication/BUILD.gn
@@ -1,4 +1,4 @@
-# Copyright (c) 2021 Huawei Device Co., Ltd.
+# Copyright (c) 2021-2023 Huawei Device Co., Ltd.
 # Licensed under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
@@ -69,7 +69,7 @@ ohos_unittest("AuthTest") {
   }
 }
 
-ohos_unittest("AuthTestMock") {
+ohos_unittest("AuthEnhanceMockTest") {
   module_out_path = module_output_path
   sources = [
     "$dsoftbus_root_path/core/authentication/src/auth_common.c",
@@ -408,12 +408,12 @@ ohos_unittest("AuthHichainTest") {
 group("unittest") {
   testonly = true
   deps = [
+    ":AuthEnhanceMockTest",
     ":AuthHichainTest",
     ":AuthOtherTest",
     ":AuthTcpConnectionTest",
     ":AuthTest",
     ":AuthTestCallBackTest",
-    ":AuthTestMock",
   ]
 }
 
